# advent_of_code_2023

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  dhat-heap.json  justfile
day-01/: Cargo.toml  README.md  input2.txt
day-01/benches/: benchmarks.rs
day-01/src/: custom_error.rs  lib.rs  part1.rs  part1_lib.rs  part2.rs  part2_lib.rs
day-02/: Cargo.toml  README.md
day-02/benches/: benchmarks.rs
day-02/src/: custom_error.rs  lib.rs  part1_lib.rs  part2_lib.rs
day-03/: Cargo.toml  README.md
day-03/benches/: benchmarks.rs
day-03/src/: custom_error.rs  data_types.rs  data_types_part1.rs  data_types_part2.rs  lib.rs  part1_lib.rs  part2_lib.rs
day-04/: Cargo.toml  README.md
day-04/benches/: benchmarks.rs
day-04/src/: custom_error.rs  lib.rs  part1_lib.rs  part2_lib.rs
day-05/: Cargo.toml  README.md
day-05/benches/: benchmarks.rs
day-05/src/: custom_error.rs  lib.rs  part1_lib.rs  part2_lib.rs  range_math.rs
day-06/: Cargo.toml  README.md
day-06/benches/: benchmarks.rs
day-06/src/: custom_error.rs  lib.rs  part1_lib.rs  part2_lib.rs
day-07/: Cargo.toml  README.md
day-07/benches/: benchmarks.rs
day-07/src/: custom_error.rs  lexer.rs  lexer_1.rs  lexer_2.rs  lib.rs  part1_lib.rs  part2_lib.rs
day-08/: Cargo.toml  README.md
day-08/benches/: benchmarks.rs
day-08/src/: custom_error.rs  lib.rs  parser.rs  parser1.rs  parser2.rs  part1_lib.rs  part2_lib.rs  part2_lib_numtheory.rs  part2_lib_rawmatrix.rs
exploratorium/: Cargo.toml  README.md  disabled-build.rs.txt
exploratorium/src/: lib.rs
template__daily_problem/: Cargo.toml  README.md  cargo-generate.toml
template__daily_problem/benches/: benchmarks.rs
template__daily_problem/src/: custom_error.rs  lib.rs  part1.rs  part1_lib.rs  part2.rs  part2_lib.rs
