[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Error handling
miette = { workspace = true }
thiserror = { workspace = true }
# Testing
test-case = { workspace = true }
# Convenience
indoc = { workspace = true }
# Profiling
# tracing-tracy = { workspace = true }
# tracy-client = { workspace = true }
# tracy-client-sys = { workspace = true }
dhat = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-03"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
