[package]
name = "exploratorium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
# Convenience
derive_more = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Math
nalgebra = { workspace = true }
ndarray = { workspace = true }
# Parsing
logos = { workspace = true }
regex = { workspace = true }
regex-automata = { workspace = true }
# Performance
once_cell = { workspace = true }
rayon = { workspace = true }
# Profiling
dhat = { workspace = true }
divan = { workspace = true }
# tracing-tracy = { workspace = true }
# tracy-client = { workspace = true }
# tracy-client-sys = { workspace = true }
# Testing
test-case = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[features]
dhat-heap = []
