[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
miette = { workspace = true }
thiserror = { workspace = true }
# Convenience
derive_more = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Math
# ...
# Parsing
logos = { workspace = true }
nom-supreme = { workspace = true }
regex = { workspace = true }
regex-automata = { workspace = true }
# Performance
once_cell = { workspace = true }
rayon = { workspace = true }
# Profiling
dhat = { workspace = true }

[dev-dependencies]
# Profiling
divan = { workspace = true }
# Testing
rstest = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
